# CauseHive-monolithic

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT_SETUP.md  Dockerfile  QUICK_START.md  RAILWAY_SETUP.md  README.md  SETUP_STATUS.md  asgi.py  deploy.sh  deploy_to_railway.sh  generate_secret_key.py  manage.py  migrate_databases.py  monolith.dockerfile  netlify.toml  package-lock.json  package-lock.json.bak  package.json  package.json.bak  railway.config.json  railway.json  requirements.txt  test_build.py  test_db_connections_simple.py
backend/services/admin_reporting_service/: README.md  celerybeat-schedule.bak  manage.py  pyproject.toml  requirements.txt
backend/services/admin_reporting_service/admin_auth/: models.py  urls.py
backend/services/admin_reporting_service/admin_reporting_service/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/services/admin_reporting_service/auditlog/: models.py  utils.py
backend/services/admin_reporting_service/dashboard/: serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/services/admin_reporting_service/management/: tests.py  throttles.py  views.py
backend/services/admin_reporting_service/notifications/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/services/cause_service/: .env  README.md  manage.py  pyproject.toml  requirements.txt
backend/services/cause_service/categories/: models.py
backend/services/cause_service/cause_service/: asgi.py  settings.py  urls.py  wsgi.py
backend/services/cause_service/causes/: models.py  serializers.py  urls.py  utils.py  views.py
backend/services/donation_processing_service/: .env  Dockerfile  README.md  main.py  manage.py  pyproject.toml  requirements.txt  urls.py  views.py
backend/services/donation_processing_service/cart/: decorators.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/services/donation_processing_service/donation_processing_service/: asgi.py  (+5 more)
backend/services/user_service/: ..env.swp  .env  README.md  pyproject.toml  requirements.txt  urls.py
(+238 files in other folders)
